// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vmware storage hosts actions fetchDatastores makes the ajax request to the right url 1`] = `
Array [
  Object {
    "key": "STORAGE_VMWARE_DATASTORES",
    "payload": Object {
      "params": Object {
        "cluster_id": "cluster",
      },
    },
    "type": "API_GET",
    "url": "test.com/datastores",
  },
]
`;

exports[`vmware storage hosts actions fetchStoragePods makes the ajax request to the right url 1`] = `
Array [
  Object {
    "key": "STORAGE_VMWARE_STORAGEPODS",
    "payload": Object {
      "params": Object {
        "cluster_id": "cluster",
      },
    },
    "type": "API_GET",
    "url": "test.com/storage_pods",
  },
]
`;
